hw_09/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: url-fraud
  labels:
    app.kubernetes.io/part-of: url-fraud
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
